devel
-----

* Added metric "rocksdb_total_sst_files" to count the number of sst files,
  aggregated over all levels of the LSM tree.

* Added startup option `--query.max-collections-per-query` to adjust the
  limit for the maximum number of collections/shards per query. The option
  defaults to `2048`, which is equivalent to the previous hardcoded value.

* Invalid keys are now reported as individual error for batch operations
  and no longer abort the whole batch.

* Updated bundled version of libunwind to 1.7-rc2.

* In batched query results, when executing requests for 
  `/_api/cursor/<cursorId>/<batchId>`, removed the restriction that the user 
  would only be able to fetch the next batch using the next batch id in 
  <batchId> if the query option `allowRetry` was set to true, but maintained
  the restriction that the user can only retrieve the latest batch if the
  query option `allowRetry` is set to true.

* Fixed BTS-1398: GEO_DISTANCE() for ArangoSearch geo_s2 analyzer.

* Improved error reporting for system calls on Windows and fixed a
  Windows-specific issue of the IOHeartbeatThread.

* FE-263: Improve forceAtlas layout in the Graph Viewer.

* BTS-1331: Reduced the amount of required network calls when using
  traversals combined with FILTER and/or PRUNE statements in a
  GeneralGraph in combination with a clustered environment.

* FE-256: Minor Graph Viewer improvements:
  - re-order right click menu
  - Make Right click menu and toolbar work in full screen
  - Remove editable attributes in edit and delete (nodes and edges) modals
  - Add "tree"-mode to editor in edit (nodes and edges) modals

* FE-266: Use the method 'fromGeoJson()' instead of 'geometry.coordinates'
  for GeoJSON.

* Fixed issue #18942: arangorestore ignores the HTTP status code.

* FE-267: fix custom analyzer & features not showing up in inverted index
  view, and support for basic fields definition.

* FE-265: Fix user permissions radio button shadow.
