@@ -1,6 +1,9 @@
 devel
 -----
 
+* When trying to read multiple documents, the coordinator will now handle
+  empty lists gracefully and return an empty result set instead of an error.
+
 * Added metric "rocksdb_total_sst_files" to count the number of sst files,
   aggregated over all levels of the LSM tree.
 
@@ -13,7 +16,7 @@ devel
 
 * Updated bundled version of libunwind to 1.7-rc2.
 
-* In batched query results, when executing requests for 
+* In batched query results, when executing requests for
   `/_api/cursor/<cursorId>/<batchId>`, removed the restriction that the user 
   would only be able to fetch the next batch using the next batch id in 
   <batchId> if the query option `allowRetry` was set to true, but maintained
